other-vpol/restrict-controlplane-scheduling/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  labels:
    app: myapp
spec:
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/master
  nodeSelector:
    kubernetes.io/hostname: minikube
  containers:
  - image: nginx
    name: pod
  restartPolicy: Always

---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  labels:
    app: myapp
spec:
  tolerations:
  - effect: NoSchedule
    key: node-role.kubernetes.io/control-plane
  nodeSelector:
    kubernetes.io/hostname: minikube
  containers:
  - image: nginx
    name: pod
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  labels:
    app: myapp
spec:
  tolerations:
  - key: "foo-bar"
    operator: "Exists"
    effect: "NoSchedule"
  containers:
  - name: busybox
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
  labels:
    app: myapp
spec:
  tolerations:
  - key: "foo-bar"
    operator: "Exists"
    effect: "NoSchedule"
  - key: "node-role.kubernetes.io/foo-bar"
    operator: "Equal"
    value: "bar"
    effect: "NoExecute"
  containers:
  - name: busybox
    image: busybox:1.35


---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-keyless
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
  tolerations:
  - operator: Exists
    effect: NoSchedule

---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-tolerations
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35

---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-empty-key
spec:
  containers:
  - name: busybox
    image: ghcr.io/kyverno/test-busybox:1.35
  tolerations:
  - key: ''
    operator: Exists
    effect: NoSchedule
